<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.syr.cis.cis444.BitcoinWallet.MainActivity$PlaceholderFragment">

    <TextView android:text="@string/init_wallet" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_wallet_complete"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_wallet_balance"
        android:id="@+id/button"
        android:layout_marginTop="76dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:onClick="viewWalletBalance" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_view_addresses"
        android:id="@+id/button2"
        android:layout_marginTop="29dp"
        android:onClick="viewAddresses"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_btc"
        android:id="@+id/button3"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="sendBtc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_receive_btc"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:onClick="receiveBtc" />

</RelativeLayout>
